github-api/src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-service
  labels:
    run: github-service
    hystrix.cluster: 'github-service'
    hystrix.enabled: 'true'
spec:
  ports:
  - port: 80
    targetPort: 5050
  selector:
    run: github-service
